--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --config ./webpack.config.js --mode development"
+    "build": "webpack --config ./webpack.config.js",
+    "frontend-dev": "webpack-dev-server --config ./webpack.config.js --mode development",
+    "backend-dev": "nodemon --inspect=0.0.0.0:9229 main.js",
+    "start": "exit 0"
   },
   "repository": {
     "type": "git",
@@ -25,6 +28,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "koa": "^2.6.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1",
@@ -44,6 +48,7 @@
     "handlebars-loader": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.4",
+    "nodemon": "^1.18.5",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.23.1",
