--- a/docker/nginx/conf/default.conf
+++ b/docker/nginx/conf/default.conf
@@ -5,35 +5,14 @@ server {
     charset utf-8;
     root /var/www/;
 
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
     location / {
-        try_files $uri @backend;
+        try_files $uri =404;
     }
 
-    location = /favicon.png {
-        log_not_found off;
-        access_log off;
-    }
-
-    location = /robots.txt {
-        log_not_found off;
-        access_log off;
-    }
-
-    location ~* ^.+\.(jpg|jpeg|gif|png|svg|js|css|mp3|ogg|mpe?g|avi|zip|gz|bz2?|rar|eot|otf|ttf|woff|woff2)$ {
-        log_not_found off;
-        access_log off;
-        expires 30d;
-        add_header Cache-Control public;
-    }
-
-    location @backend {
-        proxy_pass http://backend;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        # Following is necessary for Websocket support
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+    location /socket/ {
+        proxy_pass http://backend:3000/socket/;
     }
 }
