Added standardjs and refactored some code

--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
       "@babel/preset-react"
     ]
   },
+  "standard": {
+    "ignore": [
+      "**/*.jsx"
+    ]
+  },
   "dependencies": {
     "bootstrap": "^4.1.3",
     "koa": "^2.6.1",
