--- a/package.json
+++ b/package.json
@@ -49,16 +49,14 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.0",
-    "handlebars": "^4.0.12",
-    "handlebars-loader": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.4",
     "nodemon": "^1.18.5",
     "sass-loader": "^7.1.0",
+    "standard": "*",
     "style-loader": "^0.23.1",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10",
-    "standard": "*"
+    "webpack-dev-server": "^3.1.10"
   }
 }
