--- a/docker/nginx/conf/default.conf
+++ b/docker/nginx/conf/default.conf
@@ -9,10 +9,14 @@ server {
     error_log /var/log/nginx/error.log;
 
     location / {
-        try_files $uri =404;
+        try_files $uri $uri/index.html =404;
     }
 
-    location /socket/ {
-        proxy_pass http://backend:3000/socket/;
+    location /socket.io/ {
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $host;
+        proxy_pass http://backend:3000/socket.io/;
     }
 }
