--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '2'
 services:
   backend:
     build: ./docker/node
-    command: npm run dev:backend
+    command: npm run start:${MODE}
     volumes:
     - ./:/home/node/app
     - ./logs/npm:/home/node/.npm/_logs
@@ -14,7 +14,7 @@ services:
     - '9229:9229'
   frontend:
     build: ./docker/node
-    command: npm run dev:frontend
+    command: npm run webpack:${MODE}
     volumes:
     - ./:/home/node/app
     - ./logs/npm:/home/node/.npm/_logs
