--- a/src/client/package.json
+++ b/src/client/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "game-of-life-2018",
+  "name": "game-of-life-2018-client",
   "version": "1.0.0",
-  "description": "One more 'Game of Life' implementation",
-  "main": "index.js",
+  "description": "Client for 'Game of Life (2018)'",
+  "main": "main.jsx",
   "license": "MIT",
   "scripts": {
-    "test": "standard",
-    "webpack:production": "webpack --config ./configs/webpack.config.js --mode production",
-    "webpack:development": "webpack-dev-server --config ./configs/webpack.config.js --mode development",
-    "start:production": "node index.js",
-    "start:development": "nodemon --inspect=0.0.0.0:9229 index.js"
+    "build": "webpack --config ./webpack.config.js --mode production",
+    "dev": "npm install && webpack-dev-server --config ./webpack.config.js --mode development"
   },
   "repository": {
     "type": "git",
@@ -27,21 +24,11 @@
       "@babel/preset-react"
     ]
   },
-  "standard": {
-    "ignore": [
-      "**/*.jsx"
-    ]
-  },
   "dependencies": {
-    "bootstrap": "^4.1.3",
-    "koa": "^2.6.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1",
-    "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.1"
-  },
-  "devDependencies": {
+    "socket.io-client": "^2.1.1",
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
@@ -53,9 +40,7 @@
     "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.4",
-    "nodemon": "^1.18.5",
     "sass-loader": "^7.1.0",
-    "standard": "*",
     "style-loader": "^0.23.1",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
