--- a/src/client/package.json
+++ b/src/client/package.json
@@ -2,11 +2,11 @@
   "name": "game-of-life-2018-client",
   "version": "1.0.0",
   "description": "Client for 'Game of Life (2018)'",
-  "main": "main.jsx",
+  "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "webpack --config ./webpack.config.js --mode production",
-    "dev": "npm install && webpack-dev-server --config ./webpack.config.js --mode development"
+    "build": "webpack --config ./webpack/production.config.js",
+    "dev": "npm install && webpack-dev-server --config ./webpack/development.config.js"
   },
   "repository": {
     "type": "git",
@@ -25,10 +25,6 @@
     ]
   },
   "dependencies": {
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
-    "react-router-dom": "^4.3.1",
-    "socket.io-client": "^2.1.1",
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
@@ -40,10 +36,15 @@
     "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.4",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "react-router-dom": "^4.3.1",
     "sass-loader": "^7.1.0",
+    "socket.io-client": "^2.1.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.1.10",
+    "webpack-merge": "^4.1.4"
   }
 }
