--- a/src/server/package.json
+++ b/src/server/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "start": "node index.js",
-    "dev": "npm install && nodemon --inspect=0.0.0.0:9229 index.js"
+    "dev": "npm install && nodemon --inspect=0.0.0.0:9229 index.js",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,8 @@
     "socket.io": "^2.1.1"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
     "nodemon": "^1.18.5"
   }
 }
