--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -12,7 +12,7 @@ services:
     - '9229:9229'
     - '3000:3000'
     networks:
-    - project-network
+    - dev-network
   webpack-dev-server:
     build: ./docker/node
     command: 'npm run dev'
@@ -24,9 +24,7 @@ services:
     - '8080:8080'
     - '8888:8888'
     networks:
-    - project-network
+    - dev-network
 networks:
-  project-network:
+  dev-network:
     driver: bridge
-    ipam:
-      driver: default
