--- a/docker/node/Dockerfile
+++ b/docker/node/Dockerfile
@@ -2,8 +2,10 @@ FROM node:10.13
 
 USER node
 
+ENV NODE_ENV=development
+
 RUN mkdir /home/node/app
 
 WORKDIR /home/node/app
 
-CMD npm start
+CMD npm run dev
