Added docker-level chown'ing for ADDed files

--- a/src/client/Dockerfile
+++ b/src/client/Dockerfile
@@ -5,10 +5,10 @@ ENV NODE_ENV=production
 RUN mkdir /home/node/app /home/node/app/dist
 WORKDIR /home/node/app
 
-COPY package.json .
-COPY package-lock.json .
+COPY --chown=node:node package.json .
+COPY --chown=node:node package-lock.json .
 RUN npm install --production
 
-COPY . .
+COPY --chown=node:node . .
 
 CMD npm run build
