--- a/src/server/Dockerfile
+++ b/src/server/Dockerfile
@@ -1,14 +1,14 @@
-FROM node:10.13
+FROM node:10.13-alpine
 
 USER node
 ENV NODE_ENV=production
+ENV PATH="/home/node/app/node_modules/.bin:${PATH}"
 RUN mkdir /home/node/app
 WORKDIR /home/node/app
 
-COPY --chown=node:node package.json .
-COPY --chown=node:node package-lock.json .
+COPY --chown=node:node package*.json ./
 RUN npm install --production
 
 COPY --chown=node:node . .
 
-CMD npm start
+CMD ["node", "index.js"]
