--- a/src/client/package.json
+++ b/src/client/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack --config ./webpack/production.config.js",
-    "dev": "npm install && webpack-dev-server --config ./webpack/development.config.js"
+    "dev": "npm install && webpack-dev-server --config ./webpack/development.config.js",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -47,6 +48,8 @@
     "webpack-merge": "^4.1.4"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-dev-server": "^3.1.10"
   }
