--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,10 @@ jobs:
   build:
     docker:
     - image: maxstarikevich/game-of-life-2018:server-staging
-    - working_directory: /home/node/app
+    working_directory: /home/node/app
+    user: node
+      branches:
+        only:
+        - master
     steps:
-    - checkout
     - run: npm test
