--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,19 @@
-version: '3'
+version: '2'
 
 services:
   backend:
     build: ./src/server
+    mem_limit: 128M
     networks:
     - production-network
   webpack:
     build: ./src/client
+    mem_limit: 512M
     volumes:
     - assets:/home/node/app/dist
   nginx:
     build: ./docker/nginx
+    mem_limit: 512M
     volumes:
     - assets:/var/www
     ports:
