--- a/src/client/nginx.conf
+++ b/src/client/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80 default;
-    server_name ssr.newsite.by;
+    server_name game-of-life;
     root /usr/share/nginx/html;
     index index.html;
 
@@ -13,6 +13,6 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
         proxy_set_header Host $host;
-        proxy_pass http://control-server:9001/socket.io/;
+        proxy_pass http://server:9001/socket.io/;
     }
   }
