--- a/src/server/package.json
+++ b/src/server/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node index.js",
-    "dev": "npm install && nodemon --inspect=0.0.0.0:9229 index.js",
-    "test": "mocha"
+    "start": "nodemon index.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -24,8 +23,7 @@
     "socket.io": "^2.1.1"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^5.2.0",
+    "jest": "^24.8.0",
     "nodemon": "^1.18.5"
   }
 }
