Removed StandartJS for now

--- a/src/client/package.json
+++ b/src/client/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Client for 'Game of Life (2018)'",
   "main": "index.js",
+  "license": "MIT",
   "dependencies": {
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
