--- a/src/client/package.json
+++ b/src/client/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "game-of-life-2018-client",
+  "name": "game-of-life-v2-client",
   "version": "1.0.0",
-  "description": "Client for 'Game of Life (2018)'",
+  "description": "Client for 'Game of Life v2'",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
@@ -13,14 +13,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/max-starikevich/game-of-life-2018.git"
+    "url": "git+https://github.com/max-starikevich/game-of-life-v2.git"
   },
   "keywords": [],
   "author": "Max Starikevich <maxim.starikevich@gmail.com>",
   "bugs": {
-    "url": "https://github.com/max-starikevich/game-of-life-2018/issues"
+    "url": "https://github.com/max-starikevich/game-of-life-v2/issues"
   },
-  "homepage": "https://github.com/max-starikevich/game-of-life-2018#readme",
+  "homepage": "https://github.com/max-starikevich/game-of-life-v2#readme",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
