--- a/src/client/package.json
+++ b/src/client/package.json
@@ -8,7 +8,7 @@
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
+    "react-scripts": "3.1.1",
     "socket.io-client": "^2.2.0"
   },
   "repository": {
@@ -23,7 +23,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "standard && react-scripts test",
+    "format": "standard --fix",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -42,6 +43,10 @@
     ]
   },
   "devDependencies": {
-    "http-proxy-middleware": "^0.20.0"
+    "http-proxy-middleware": "^0.20.0",
+    "standard": "*"
+  },
+  "standard": {
+    "parser": "babel-eslint"
   }
 }
